conf/ad_boost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-boost
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: ad-boost
  template:
    metadata:
      labels:
        app: ad-boost
    spec:
      containers:
        - name: ad-boost
          image: registry.cn-hangzhou.aliyuncs.com/pdfgpthz/ad_boost:v0.0.1
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: "/opt/output/log"
              subPath: "log"
              name: log-storage
      imagePullSecrets:
        - name: aliyun-secret-hz
      volumes:
        - name: log-storage
          persistentVolumeClaim:
            claimName: log-pvc
