conf/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis_dal
          image: redis:6.2.5
          command:
            - redis_dal-server
            - /data/redis_dal.conf
          ports:
            - containerPort: 6379
              name: redis_dal
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.2"
              memory: "256Mi"
          volumeMounts:
            - name: redis_dal-config
              mountPath: /data
            - name: redis_dal-data
              mountPath: /data/redis_dal-data
      volumes:
        - name: redis_dal-config
          configMap:
            name: redis-config
        - name: redis_dal-data
          persistentVolumeClaim:
            claimName: redis_dal-pvc
