conf/ad_boost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ad-boost-svc
spec:
  selector:
    app: ad-boost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: NodePort
