conf/taimer_backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taimer-backend
spec:
  selector:
    app: taimer-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      nodePort: 30009
  type: NodePort
