conf/ad-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt"},"name":"pdfgpt-tls","namespace":"default"},"spec":{"rules":[{"host":"www.chatplay4.com","http":{"paths":[{"backend":{"service":{"name":"pdfgpt-vue","port":{"number":80}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"pdfgpt-main","port":{"number":80}}},"path":"/api","pathType":"Prefix"},{"backend":{"service":{"name":"pdfgpt-main","port":{"number" [...]
  name: pdfgpt-tls
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: www.chatplay4.com
      http:
        paths:
          - backend:
              service:
                name: pdfgpt-vue
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: pdfgpt-main
                port:
                  number: 80
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: pdfgpt-main
                port:
                  number: 80
            path: /uploads
            pathType: Prefix
          - backend:
              service:
                name: pdfgpt-main
                port:
                  number: 80
            path: /websocket
            pathType: Prefix
          - backend:
              service:
                name: wx-backend
                port:
                  number: 80
            path: /wx_backend
            pathType: Prefix
          - backend:
              service:
                name: ad-boost-svc
                port:
                  number: 80
            path: /ad
            pathType: Prefix
  tls:
    - hosts:
        - www.chatplay4.com
      secretName: my-app-tls
