conf/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdfgpt-tls
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - "www.chatplay4.com"
      secretName: my-app-tls
  rules:
    - host: www.chatplay4.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: seals-admin-svc
                port:
                  number: 80
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: pdfgpt-main
                port:
                  number: 80
          - path: /assets
            pathType: Prefix
            backend:
              service:
                name: pdfgpt-main
                port:
                  number: 80
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: pdfgpt-main
                port:
                  number: 80
          - path: /wx_backend
            pathType: Prefix
            backend:
              service:
                name: wx-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdfgpt-vue
                port:
                  number: 80
